--- a/tensorflow-js-study/4-mnist/package.json
+++ b/tensorflow-js-study/4-mnist/package.json
@@ -14,7 +14,7 @@
     "vega-embed": "^3.0.0"
   },
   "scripts": {
-    "watch": "cross-env NODE_ENV=development parcel index.html --open",
+    "start": "cross-env NODE_ENV=development parcel index.html --open",
     "build": "cross-env NODE_ENV=production parcel build index.html --no-minify --public-url ./",
     "postinstall": "yarn upgrade --pattern @tensorflow"
   },
