--- a/tensorflow-js-study/6-mobilenet/package.json
+++ b/tensorflow-js-study/6-mobilenet/package.json
@@ -9,11 +9,13 @@
     "node": ">=8.9.0"
   },
   "dependencies": {
-    "@tensorflow/tfjs": "^0.12.6"
+    "@tensorflow/tfjs": "^0.12.6",
+    "serve": "^10.0.1"
   },
   "scripts": {
-    "start": "cross-env NODE_ENV=development parcel index.html --open",
-    "build": "cross-env NODE_ENV=production parcel build index.html  --no-minify --public-url ./",
+    "start": "run-p static watch",
+    "static": "serve model.json",
+    "watch": "cross-env NODE_ENV=development parcel index.html --open",
     "link-local": "yalc link",
     "postinstall": "yarn upgrade --pattern @tensorflow"
   },
@@ -23,6 +25,7 @@
     "babel-preset-env": "~1.6.1",
     "clang-format": "~1.2.2",
     "cross-env": "^5.1.6",
+    "npm-run-all": "^4.1.3",
     "parcel-bundler": "^1.9.7",
     "yalc": "~1.0.0-pre.22"
   }
