gh-pages向けビルド設定

--- a/tensorflow-js-study/6-coco-ssd/package.json
+++ b/tensorflow-js-study/6-coco-ssd/package.json
@@ -14,7 +14,7 @@
   },
   "scripts": {
     "start": "parcel --open index.html",
-    "build": "parcel build index.html  --no-minify --public-url ./",
+    "build": "parcel build index.html -d public --public-url ./",
     "lint": "eslint .",
     "link-local": "yalc link @tensorflow-models/object-detection"
   },
