--- a/tensorflow-js-study/3-fit-curve/package.json
+++ b/tensorflow-js-study/3-fit-curve/package.json
@@ -15,7 +15,7 @@
   },
   "scripts": {
     "start": "cross-env NODE_ENV=development parcel index.html --open",
-    "build": "cross-env NODE_ENV=production parcel build index.html -d build --no-minify --public-url ./",
+    "build": "cross-env NODE_ENV=production parcel build index.html -d public --public-url ./",
     "postinstall": "yarn upgrade --pattern @tensorflow"
   },
   "devDependencies": {
