--- a/tensorflow-js-study/7-mobilenet/package.json
+++ b/tensorflow-js-study/7-mobilenet/package.json
@@ -13,6 +13,7 @@
   },
   "scripts": {
     "start": "cross-env NODE_ENV=development parcel index.html --open",
+    "build": "parcel build index.html -d public --public-url ./",
     "link-local": "yalc link",
     "postinstall": "yarn upgrade --pattern @tensorflow"
   },
@@ -23,6 +24,7 @@
     "clang-format": "~1.2.2",
     "cross-env": "^5.1.6",
     "parcel-bundler": "^1.9.7",
+    "parcel-plugin-json-url-loader": "^0.1.1",
     "yalc": "~1.0.0-pre.22"
   }
 }
