--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
     "singleQuote": true
   },
   "lint-staged": {
-    "**/*.js": [
-      "prettier --write",
-      "standard --fix",
-      "git add"
-    ],
+    "linters": {
+      "*.js": [
+        "prettier --write",
+        "standard --fix",
+        "git add"
+      ]
+    },
     "ignore": [
       "**/lib/*.js",
       "**/public/*.js"
