--- a/tensorflow-js-study/8-webcam-transfer-learning/package.json
+++ b/tensorflow-js-study/8-webcam-transfer-learning/package.json
@@ -14,7 +14,7 @@
   },
   "scripts": {
     "start": "cross-env NODE_ENV=development parcel index.html --no-hmr --open",
-    "build": "cross-env NODE_ENV=production parcel build index.html  --no-minify --public-url ./",
+    "build": "cross-env NODE_ENV=production parcel build index.html -d public --public-url ./",
     "link-local": "yalc link",
     "postinstall": "yarn upgrade --pattern @tensorflow"
   },
