--- a/tensorflow-js-study/10-posenet/package.json
+++ b/tensorflow-js-study/10-posenet/package.json
@@ -14,12 +14,13 @@
     "stats.js": "^0.17.0"
   },
   "scripts": {
-    "watch": "parcel --no-hmr --open index.html ",
-    "build": "parcel build index.html  --no-minify --public-url ./",
-    "build-camera": "parcel build camera.html  --no-minify --public-url ./",
+    "start": "parcel ./index.html --no-hmr --open",
+    "build": "parcel build ./index.html  --no-minify --public-url ./",
+    "build-camera": "parcel build ./camera.html  --no-minify --public-url ./",
     "lint": "eslint ."
   },
   "devDependencies": {
+    "babel-core": "^6.26.3",
     "babel-plugin-transform-runtime": "~6.23.0",
     "babel-polyfill": "~6.26.0",
     "babel-preset-env": "~1.6.1",
@@ -28,7 +29,7 @@
     "dat.gui": "^0.7.2",
     "eslint": "^4.19.1",
     "eslint-config-google": "^0.9.1",
-    "parcel-bundler": "~1.6.2"
+    "parcel-bundler": "^1.10.3"
   },
   "eslintConfig": {
     "extends": "google",
