--- a/tensorflow-js-study/6-coco-ssd/package.json
+++ b/tensorflow-js-study/6-coco-ssd/package.json
@@ -14,12 +14,13 @@
     "stats.js": "^0.17.0"
   },
   "scripts": {
-    "start": "parcel --open index.html",
-    "build": "parcel build index.html -d public --public-url ./",
+    "start": "parcel ./index.html --open",
+    "build": "parcel build ./index.html -d public --public-url ./",
     "lint": "eslint .",
     "link-local": "yalc link @tensorflow-models/object-detection"
   },
   "devDependencies": {
+    "babel-core": "^6.26.3",
     "babel-plugin-transform-runtime": "~6.23.0",
     "babel-polyfill": "~6.26.0",
     "babel-preset-env": "~1.6.1",
@@ -29,7 +30,7 @@
     "dat.gui": "^0.7.1",
     "eslint": "^4.19.1",
     "eslint-config-google": "^0.9.1",
-    "parcel-bundler": "~1.6.2",
+    "parcel-bundler": "^1.10.3",
     "parcel-plugin-json-url-loader": "^0.1.1",
     "typescript": "^3.0.3",
     "yalc": "~1.0.0-pre.21"
