--- a/tensorflow-js-study/12-simple-object-detection/package.json
+++ b/tensorflow-js-study/12-simple-object-detection/package.json
@@ -15,7 +15,7 @@
     "node-fetch": "2.2.1"
   },
   "scripts": {
-    "watch": "cross-env NODE_ENV=development parcel index.html --no-hmr --open",
+    "start": "cross-env NODE_ENV=development parcel index.html --no-hmr --open",
     "build": "cross-env NODE_ENV=production parcel build index.html --no-minify --public-url ./",
     "link-local": "yalc link",
     "postinstall": "yarn upgrade --pattern @tensorflow",
