--- a/tensorflow-js-study/13-face-api/package.json
+++ b/tensorflow-js-study/13-face-api/package.json
@@ -1,7 +1,7 @@
 {
   "name": "13-face-api",
   "version": "1.0.0",
-  "description": "TODO: 上手く動かなかったため、動作確認するをする",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -9,8 +9,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "install": "^0.12.2",
-    "node-media-server": "^1.4.9",
-    "npm": "^6.5.0"
+    "node-media-server": "^1.4.9"
   }
 }
