--- a/.editorconfig
+++ b/.editorconfig
@@ -8,5 +8,11 @@ charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 
+# Ignore paths
 [*.rs]
-indent_size = 4
+charset = none
+end_of_line = none
+insert_final_newline = none
+trim_trailing_whitespace = none
+indent_style = none
+indent_size = none
