数当てゲーム

--- a/.editorconfig
+++ b/.editorconfig
@@ -8,11 +8,6 @@ charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 
-# Ignore paths
+# rust(rls) tab size
 [*.rs]
-charset = none
-end_of_line = none
-insert_final_newline = none
-trim_trailing_whitespace = none
-indent_style = none
-indent_size = none
+indent_size = 4
