rust study / slice

--- a/rust-study/programming/Cargo.toml
+++ b/rust-study/programming/Cargo.toml
@@ -7,6 +7,10 @@ edition = "2018"
 [dependencies]
 
 [[bin]]
+name = "slice-type"
+path = "src/slice-type.rs"
+
+[[bin]]
 name = "borrowing"
 path = "src/borrowing.rs"
 
