--- a/rust-study/amethyst_example/Cargo.toml
+++ b/rust-study/amethyst_example/Cargo.toml
@@ -5,7 +5,10 @@ authors = []
 edition = "2018"
 
 [dependencies]
-amethyst = "0.12.0"
+
+[dependencies.amethyst]
+version = "0.13.2"
+features = ["vulkan"]
 
 [features]
 empty = ["amethyst/empty"]
