--- a/rust-study/amethyst_example/Cargo.toml
+++ b/rust-study/amethyst_example/Cargo.toml
@@ -8,9 +8,9 @@ edition = "2018"
 
 [dependencies.amethyst]
 version = "0.13.2"
-features = ["vulkan"]
 
 [features]
+default = ["vulkan"]
 empty = ["amethyst/empty"]
 metal = ["amethyst/metal"]
 vulkan = ["amethyst/vulkan"]
