--- a/rust-study/amethyst_example/Cargo.toml
+++ b/rust-study/amethyst_example/Cargo.toml
@@ -5,9 +5,12 @@ authors = []
 edition = "2018"
 
 [dependencies]
-amethyst = "0.12.0"
+
+[dependencies.amethyst]
+version = "0.13.2"
 
 [features]
+default = ["vulkan"]
 empty = ["amethyst/empty"]
 metal = ["amethyst/metal"]
 vulkan = ["amethyst/vulkan"]
