--- a/rust-study/amethyst_example/Cargo.toml
+++ b/rust-study/amethyst_example/Cargo.toml
@@ -19,3 +19,7 @@ vulkan = ["amethyst/vulkan"]
 [[example]]
 name = "qbit"
 path = "src_qbit/main.rs"
+
+[[example]]
+name = "api"
+path = "src_all_api/main.rs"
