フォルダ構成変更

--- a/rust-study/amethyst_example/Cargo.toml
+++ b/rust-study/amethyst_example/Cargo.toml
@@ -15,3 +15,19 @@ default = ["vulkan"]
 empty = ["amethyst/empty"]
 metal = ["amethyst/metal"]
 vulkan = ["amethyst/vulkan"]
+
+[[example]]
+name = "empty_state"
+path = "src/examples/empty_state/main.rs"
+
+[[example]]
+name = "simple_state"
+path = "src/examples/simple_state/main.rs"
+
+[[example]]
+name = "window"
+path = "src/examples/window/main.rs"
+
+[[example]]
+name = "custom_game_data"
+path = "src/examples/custom_game_data/main.rs"
