--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "url": "https://github.com/ampcpmgp/weekly-report/issues"
   },
   "homepage": "https://github.com/ampcpmgp/weekly-report#readme",
-  "devDependencies": {}
+  "devDependencies": {
+    "eslint": "^7.12.1",
+    "prettier": "^2.1.2"
+  }
 }
